# batch-image-studio

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MODEL_PACKAGE_PLAN.md  MODEL_RELEASE_CHECKLIST.md  PRD.md  README.md  index.html  package-lock.json  package.json  playwright-ui.spec.cjs  playwright.config.ts  stitch提示词-完整版.md  stitch提示词.md  tailwind.config.js  补充稿.md  页面交互操作草稿.md
.github/workflows/: build.yml
_bmad-output/implementation-artifacts/: 6-1-model-preload-ready-state.md  6-2-system-settings.md  6-3-error-recovery.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: README.md  changelog.md  index.md  install.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/plans/: 2026-03-23-batch-image-studio-mvp.md  2026-03-23-mvp-closure-plan.md  2026-03-24-local-onnx-inpainting-design.md  2026-03-26-import-undo-and-template-switching-issues-complete.md  2026-03-26-import-undo-and-template-switching-issues.md  2026-03-26-interaction-redesign-analysis.md  2026-03-26-interaction-redesign-implementation-plan.md  2026-03-26-redesign-feature-list.md  2026-03-26-workflow-sequence-diagrams.md  README.md
docs/public/: CNAME
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: lama_inpaint.py  lama_server.py  test_lama.py
src-tauri/src/: lib.rs  model_runtime.rs  onnx_server.rs
(+71 files in other folders)
