[package]
name = "app"
version = "0.1.1"
description = "Desktop MVP scaffold for Batch Image Studio"
authors = ["luoyaosheng"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
image = "0.25.6"
base64 = "0.22.1"
walkdir = "2.5.0"
anyhow = "1.0.102"
inpaint = { version = "0.1.7", features = ["image"] }
texture-synthesis = "0.8.2"
ndarray = { version = "0.17.2", features = ["std"] }
# tract-onnx 不支持 PyTorch 导出的 ONNX 模型（aten_* 算子）
# 使用 Python onnxruntime 通过脚本调用
# tempfile 用于临时文件
tempfile = "3"
